# pascal_cli

./: .gitignore  Cargo.toml
lib/: Cargo.toml  lib.rs
programs/deployr/: Cargo.toml  credentials.rs  init.rs  program.rs  verify.rs
programs/hwd/: Cargo.toml  program.rs
programs/ls/: Cargo.toml  program.rs
programs/template/: Cargo.toml  program.rs
src/: main.rs  programs.rs  tests.rs
src/programs/: hwd.rs
src/tests/: t_tests.rs
versions/v1.0/: pascal_cli
versions/v1.1/: pan
versions/v1.2/: pan
versions/v1.2/pan_c/: templates.json
versions/v2.0/pan_c/: templates.json
